SinglyLinkedListed implementntation
- dummy node 없이 구현
- add(), remove() 메서드 구현
- 테스트 코드 작성